package com.greentree.engine.moon.render.window;


public enum CursorInputMode{
	NORMAL(),
	HIDDEN(),
	DISABLED(),
	;



}
