
@startuml window

!include public.wsd

namespace window {
    enum WindowHit {
        FULL_SCEAN
        VSYNC
        RESIZBLE
    }
    enum CursorInputMode {
        NORMAL
        HIDDEN
        DISABLED
    }
    interface Window {
        int width()
        int height()

        RenderTarget renderTarget()

        boolean hasHit(WindowHit)
        void addHit(WindowHit)
        void removeHit(WindowHit)

        String title()

        Monitor monitor()

        void setInputMode(CursorInputMode mode)
        CursorInputMode getInputMode()
    }
    Window::renderTarget ..> target.RenderTarget : <<return>>
    Window::monitor ..> Monitor : <<return>>
    Window::setInputMode ..> CursorInputMode : <<use>>
    Window::hasHit ..> WindowHit : <<use>>
    Window::addHit ..> WindowHit : <<use>>
    Window::removeHit ..> WindowHit : <<use>>
    interface Monitor {
        int width()
        int height()
    }
    interface WindowLibrary {
        Window createWindow(String title, int width, int height, WindowHit... hits)
    }
    WindowLibrary::createWindow ..> Window : <<return>>
    WindowLibrary::createWindow ..> WindowHit : <<use>>
}

@enduml
